--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                 long: 73.098641
             },
             {
+                name: "Kedareshwar",
+                lat: 21.1261579,
+                long: 73.1231582
+            },
+            {
                 name: "Kamrej",
                 lat: 21.269354,
                 long: 72.962955
