--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                 lat: 21.269354,
                 long: 72.962955
             },
+            {
+                name: "Isroli",
+                lat: 21.0946906,
+                long: 73.1055137
+            },
         ];
 
         cities.forEach(city => {
