Updated location of katargam

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                 long: 73.098641
             },
             {
+                name: "Katargam",
+                lat: 21.2249321,
+                long: 72.8315132
+            },
+            {
                 name: "Kedareshwar",
                 lat: 21.1261579,
                 long: 73.1231582
