--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
     <title>BMIIT Workship</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
@@ -28,6 +27,12 @@
         }).addTo(map);
 
         let cities = [
+            
+            {
+                name: "Kodaikanal",
+                lat: 10.2360905,
+                long: 77.4570344
+            },
             {
                 name: "Surat",
                 lat: 21.1190193,
