new near location added

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         let cities = [
             
             {
-                name: "Kodaikanal",
-                lat: 10.2360905,
-                long: 77.4570344
+                name: "VR Mall",
+                lat: 21.1447885,
+                long: 63.528963
             },
             {
                 name: "Surat",
