--- a/index.html
+++ b/index.html
@@ -60,8 +60,13 @@
             },
             {
                 name: "TRR",
-                lat: 21.1879646, 
+                lat: 21.1879646,
                 long: 72.8644351
+            },
+            {
+                name: "Kanai",
+                lat: 21.0669508,
+                long: 73.1386311
             }
         ];
 
@@ -72,19 +77,19 @@
 
 
 
-// const popup = L.popup()
-// .setLatLng([51.513, -0.09])
-// .setContent('I am a standalone popup.')
-// .openOn(map);
+        // const popup = L.popup()
+        // .setLatLng([51.513, -0.09])
+        // .setContent('I am a standalone popup.')
+        // .openOn(map);
 
-// function onMapClick(e) {
-// popup
-// .setLatLng(e.latlng)
-// .setContent(`You clicked the map at ${e.latlng.toString()}`)
-// .openOn(map);
-// }
+        // function onMapClick(e) {
+        // popup
+        // .setLatLng(e.latlng)
+        // .setContent(`You clicked the map at ${e.latlng.toString()}`)
+        // .openOn(map);
+        // }
 
-// map.on('click', onMapClick);
+        // map.on('click', onMapClick);
 
     </script>
 </body>
