--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
                 name: "Kanai",
                 lat: 21.0669508,
                 long: 73.1386311
+            },
+            {
+                name: "godadra",
+                lat: 21.167772, 
+                long: 72.877407
             }
         ];
 
