--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
                 name: "Kanai",
                 lat: 21.0669508,
                 long: 73.1386311
+            },
+             {
+                name: "UTU",
+                lat: 21.0693155,
+                long: 73.1327361
             }
         ];
 
