--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 
         let cities = [
             {
+                name: "VR-Mall",
+                lat: 21.1447885,
+                long: 63.528963
+            },
+            {
                 name: "Surat",
                 lat: 21.1190193,
                 long: 72.9077824
@@ -52,6 +57,11 @@
                 name: "Kamrej",
                 lat: 21.269354,
                 long: 72.962955
+            },
+            {
+                name: "UTU",
+                lat: 21.066269,
+                long: 73.1176794
             },
             {
                 name: "Isroli",
