--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
                 lat: 21.0693155,
                 long: 73.1327361
             }
+            {
+                name: "khergam"
+                lat: 20.6149, 
+                long: 73.0612
+            }
         ];
 
         cities.forEach(city => {
